k8s/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: level-up-accounts-api
  namespace: level-up-accounts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: level-up-accounts-api
  template:
    metadata:
      labels:
        app: level-up-accounts-api
    spec:
      containers:
      - name: api
        image: docker.io/thongnv0701/levelupaccounts:latest
        command: ["dotnet"]
        args: ["LevelUpAccounts.API.dll"]
        workingDir: /app
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config-volume
          mountPath: /app/config
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
        readinessProbe:
          httpGet:
            path: /api/v1/ping
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /api/v1/ping
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
      volumes:
      - name: config-volume
        emptyDir: {}
      - name: github-auth
        secret:
          secretName: github-auth
          items:
          - key: token
            path: token
