k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: level-up-accounts-api
  namespace: level-up-accounts
spec:
  selector:
    app: level-up-accounts-api
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
